--- a/ListenUp/Base.lproj/Main.storyboard
+++ b/ListenUp/Base.lproj/Main.storyboard
@@ -303,8 +303,14 @@
                                                 </imageView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Mm-5r-hkz">
                                                     <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <state key="normal" title="Button"/>
-                                                    <buttonConfiguration key="configuration" style="plain" title="Play/Pause"/>
+                                                    <buttonConfiguration key="configuration" style="plain">
+                                                        <imageReference key="image" image="play.circle" catalog="system" symbolScale="default"/>
+                                                        <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="font" scale="large">
+                                                            <fontDescription key="fontDescription" type="system" pointSize="42"/>
+                                                        </preferredSymbolConfiguration>
+                                                    </buttonConfiguration>
                                                 </button>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9uP-Y6-n2x" userLabel="labelsView">
                                                     <rect key="frame" x="88" y="4" width="273" height="175"/>
@@ -364,6 +370,7 @@
                                         <connections>
                                             <outlet property="albumArtworkView" destination="qMc-4q-NNR" id="bCh-nc-dkN"/>
                                             <outlet property="artistNameLabel" destination="m0r-6q-fM5" id="DJq-Vy-faZ"/>
+                                            <outlet property="mediaButton" destination="4Mm-5r-hkz" id="S6c-XE-se8"/>
                                             <outlet property="postSymbol" destination="82h-vY-ae3" id="ur2-EW-8JQ"/>
                                             <outlet property="trackNameLabel" destination="Q4n-Td-9pL" id="pYp-Ux-Ri1"/>
                                         </connections>
