Moved most of the feed logic to PostListTemplate. This is where shared code will live for any lists of posts

--- a/ListenUp/Base.lproj/Main.storyboard
+++ b/ListenUp/Base.lproj/Main.storyboard
@@ -548,7 +548,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="oJb-lq-CV0"/>
                     <connections>
-                        <outlet property="tableView" destination="oe4-vc-iqG" id="FFh-4v-GDa"/>
+                        <outlet property="tableView" destination="oe4-vc-iqG" id="FXW-np-wrQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f4m-2o-rrj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
